Comments re: provenance

--- a/README
+++ b/README
@@ -1,9 +1,12 @@
-Latest source and some binaries can be found at:
+Original source and some binaries can be found at:
 
   http://www.geocities.com/g_w_reynolds/gcwsieve/
 
-To report bugs, email me (Geoff): g_w_reynolds at yahoo.co.nz.
+Current version of the code is located at:
 
+  https://github.com/ibethune/gcwsieve
+
+and is maintained by Iain Bethune.  Bugs/comments/improvements should be notified through GitHub.
 
 GCWSIEVE
 ========
